--- a/Production Practice/20160725.md
+++ b/Production Practice/20160725.md
@@ -1,11 +1,13 @@
-# 20160725
+# android webview js调用java方法
 
 
 
 android webview js调用java方法
 
-1. html文件中 onclick方法中 window.examole.functionexample()
+1. html文件中 onclick方法中 window.example.functionexample()
 2. java文件中webview相关配置(注意webview的js实现)
+	
+	webView.addJavascriptInterface(this,"example");
 3. @JavascriptInterface
 
     public void functionexample(){}
